--- a/front-grupo1/package.json
+++ b/front-grupo1/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "vue": "^3.5.12",
+    "vue-cookies": "^1.8.4",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
