--- a/front-grupo1/package.json
+++ b/front-grupo1/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
     "vue": "^3.5.12",
     "vue-cookies": "^1.8.4",
     "vue-router": "^4.4.5"
