Implementación de Procedimientos almacenados en el Backend
- Cambios en las dependencias
- application.properties
- DatabaseContext
- Creación de servicio y controlador para procedimientos

EL PROCEDIMIENTO 19 NO FUNCIONA CORRECTAMENTE

--- a/back-grupo1/src/main/resources/application.properties
+++ b/back-grupo1/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=grupo1
 
-database.url=jdbc:postgresql://localhost:5433/lab1tbd
-database.user=postgres
-database.password=password
+spring.datasource.url=jdbc:postgresql://localhost:5433/lab1tbd
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.hikari.maximumPoolSize=10
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 server.port = 8090
 
 spring.jpa.hibernate.ddl-auto=update
