--- a/back-grupo1/build.gradle
+++ b/back-grupo1/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	// AGREGADOS
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
