--- a/back-grupo1/build.gradle
+++ b/back-grupo1/build.gradle
@@ -25,10 +25,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-security'  // Necesaria para Spring Security
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // API principal para JWT
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'   // Implementación de JWT
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // Integración con Jackson para parsear JSON
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'org.sql2o:sql2o:1.8.0'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
 
